fix: wrapping of max character counter with children and error messages in StringInput.tsx and SmallInput.tsx

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -456,8 +456,14 @@ section {
     color: var(--critical)
 }
 
+.input__sub-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
 .input__char--counter {
-    text-align: right;
+    align-self: right;
 }
 
 /* Input File Upload */
